# Scrappy

./: LICENSE  README.md
KiCad/: 5V_Reg-cache.lib  5V_Reg.sch  5V_Reg.sch-bak  Scrappy  Scrappy-cache.lib  Scrappy.kicad_pcb  Scrappy.kicad_pcb-bak  Scrappy.pro  Scrappy.sch  Scrappy.sch-bak  Scrappy.xml  StepperDrivers-cache.lib  StepperDrivers.pro  StepperDrivers.sch  StepperDrivers.sch-bak  _autosave-Scrappy.kicad_pcb  fp-info-cache  sym-lib-table
KiCad/KiCadLib/: SamacSys_Parts.bck  SamacSys_Parts.dcm  SamacSys_Parts.lib
KiCad/KiCadLib/SamacSys_Parts.3dshapes/: 1888687.stp  477CKS035M.stp  CGA3E2X7R1E104K080AA.stp  TS2596CM550_RNG.stp
KiCad/KiCadLib/SamacSys_Parts.pretty/: CAPC1608X90N.kicad_mod  CAPPRD525W60D1025H1750.kicad_mod  INDPM110100X400N.kicad_mod  SHDR2W90P0X508_1X2_1016X950X1500P.kicad_mod  TE_2-215309-0.kicad_mod  TS2596CM550RNG.kicad_mod
Software/: README.md
Software/Scrappy_Core/: CMakeLists.txt
Software/Scrappy_Core/include/: DataTransport.h  JsonMsgGenerator.h
Software/Scrappy_Core/msg_headers/: point.h
Software/Scrappy_Core/msgs/: point.msg
Software/Scrappy_Core/src/: DataTransport.cpp  GenerateMsgs.cpp  JsonMsgGenerator.cpp  ParseMsgs.cpp  TestReceive.cpp
Software/TestModule/: CMakeLists.txt
Software/TestModule/src/: TestPub.cpp  TestReceive.cpp
Software/VisionProcessing/: CMakeLists.txt
Software/VisionProcessing/src/: CameraInterface.cpp
Software/Vision_Processing/: CMakeLists.txt
Software/Vision_Processing/src/: CameraInterface.cpp
Solidworks/: Core.SLDPRT  Cover.SLDPRT  Cover_Angled.SLDPRT  Jetson__VREG_Board.SLDPRT  Leg.SLDPRT  Leg_Assem.SLDASM  SLA_Batt.SLDPRT  Side_Plate.SLDPRT  Wheel_Geared.SLDALASM  Wheel_Geared.SLDASM
Solidworks/Hardware/: 5972K91_Ball Bearing.SLDPRT  90751A110_18-8 Stainless Steel Socket Head Screws.SLDPRT
Solidworks/SLACore/: Core.SLDPRT  SLA_Batt.SLDPRT
Solidworks/ServoAdapter/: Rotation_Cuff.SLDPRT  Servo_Bracket.SLDPRT  Servo_Leg.SLDASM
Solidworks/ServoAdapter/Servo/: HS-311_Servo.SLDPRT  ServoLogo.p2d
Solidworks/StepperLeg/: Leg.SLDPRT  Leg_Assem.SLDASM  Leg_Assem_V2.SLDASM  OuterAxle.SLDPRT  StepperBase.SLDPRT  StepperExtension.SLDPRT  TODO.txt  Wheel.SLDPRT  Wheel_Geared.SLDASM  Wheel_Half.SLDPRT
Solidworks/StepperLeg/SteppperMotor/: Casing.SLDPRT  NEMA 17.SLDASM  Shaft.SLDPRT
Solidworks/SteppperMotor/: Base.SLDPRT  NEMA 17.SLDASM  Top.SLDPRT
